# Rust-Football-League

./: .gitignore  Cargo.toml  README.md  mon_projet.db
csv/: attribut_gardiens.csv  attribut_joueurs.csv
db/: db_connection.rs  schema.sql  simulation.db  simulation.db-journal
db/data/: clubs.csv  competitions.csv  etat_club_saison.csv  info_club.csv  joueurs.csv  joueurs_libres.csv  primes_classement_saison.csv  saison_club.csv  saisons.csv  stats_gardiens.csv  stats_joueurs.csv
db/données/: club.csv  clubs.csv  joueurs.csv
src/: app.rs  database.rs  db_setup.rs  main.rs  models.rs
src/BL/manager/: composition_manager.rs  match_manager.rs
src/SqliteDao/: sqlite_composition_dao.rs
src/calendrier/: mod.rs
src/calendrier/businessLogic/: calendrier_facade.rs  calendrier_manager.rs  mod.rs
src/calendrier/persistCalendrier/: calendrier_dao.rs  mod.rs  sql_calendrier_dao.rs
src/calendrier/ui/: ecran_calendrier.rs  mod.rs
src/composition/: mod.rs
src/composition/business_logic/: composition_facade.rs  composition_manager.rs  joueur_facade.rs  joueur_manager.rs  mod.rs
src/composition/persist_joueur/: joueur_dao.rs  mod.rs  sql_joueur_dao.rs
src/composition/ui/: ecran_composition.rs  (+1 more)
src/dao/: match_dao.rs  mod.rs
src/infos_club/: mod.rs
src/manager/: composition_manager.rs  match_manager.rs
src/mercato/: mod.rs
src/model/: CompositionResume.rs  SlotComposition.rs  match.rs  mod.rs  resultat_match.rs
src/page/: accueil.rs  menu_principal.rs  mod.rs
src/prochain_match/: mod.rs
src/selection_club/: mod.rs
src/simulation/: mod.rs  test.rs
(+66 files in other folders)
