[package]
name = "football_simulation"
version = "0.1.0"
edition = "2024"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }

[dependencies]
csv = "1.4.0"
eframe = "0.26.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
